--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+     <link rel="icon" href="Logo.ico">
 </head>
 <body>
             <h1 class="ti-1">Digital gadget</h1>
         <form>
-    <a class="Li-1" href="Laptops.html">Laptops</a>
+    <a class="Li-1" href=" ">Laptops</a>
     <a class="Li-1" href="Celulares.html">Celulares</a>
     <a class="Li-1" href="Accesorios.html">Accesorios</a>
         </form>
